Thu May 31 16:21:04 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * docs/design/configuration_design.txt:
        * docs/design/fully_established_connection.txt:
        * docs/design/IDL_compiler.txt:
        * docs/design/README:
        * docs/design/transport_hooks.txt:
        * docs/design/transport_reconnect.txt:
        
          Added these existing design notes.

Thu May 31 15:53:55 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/dcpsinfo_test.mpc:
        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/DCPSInfoRepo/subscriber.cpp:
        * tests/DCPS/DCPSInfoRepo/test_helper.h:
        * tests/DCPS/DCPSInfoRepo/test_helper.cpp:

          Re-worked the way the tests get access (via friendship) to the
          private "remote" objects in the Data{Reader,Writer}Impls.  These
          tests should now compile on all platforms but will need more work to
          run successfully.

Thu May 31 14:49:10 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * performance-tests/DCPS/Sync/Sync.mpc:

          Older versions of TAO need an explicit base project with IDL support
          so that the IDL_Files {...} section is recognized.

        * performance-tests/DCPS/Sync/SyncClient_i.cpp:

          Use the root_poa_ member variable instead of local.

Wed May 30 23:50:53 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * tests/DCPS/MultiTopicTest/DataReaderListener2.cpp:
        * tests/DCPS/MultiTopicTest/DataReaderListener3.cpp:
        * tests/DCPS/FooTest3_1/PubDriver.cpp:
        * tests/DCPS/FooTest3_2/PubDriver.cpp:

          Fix gcc build errors.

Wed May 30 22:41:10 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/CorbaSeq/DataReaderListener.h:
        * tests/DCPS/CorbaSeq/DataReaderListener.cpp:
        * tests/DCPS/CorbaSeq/Writer.cpp:
        * tests/DCPS/CorbaSeq/publisher.cpp:
        * tests/DCPS/CorbaSeq/subscriber.cpp:
