@@ -1,3 +1,11 @@
+Thu May 31 17:51:57 UTC 2007  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.h:
+        * dds/DCPS/DataWriterImpl.h:
+        * tests/DCPS/DCPSInfoRepo/test_helper.h:
+
+          Further fixes for the friendship hack.
+
 Thu May 31 16:21:04 UTC 2007  Scott Harris  <harris_s@ociweb.com>
 
         * docs/design/configuration_design.txt:
@@ -6,7 +14,7 @@ Thu May 31 16:21:04 UTC 2007  Scott Harris  <harris_s@ociweb.com>
         * docs/design/README:
         * docs/design/transport_hooks.txt:
         * docs/design/transport_reconnect.txt:
-        
+
           Added these existing design notes.
 
 Thu May 31 15:53:55 UTC 2007  Adam Mitz  <mitza@ociweb.com>
